# shieldreduce

./: .gitignore  AEInstructions.md  README.md  SimpleExperiments.md
ClientScript/: dockerUp.sh  linuxUp.sh  multiDown_Unique.sh  multiUp_Unique.sh  simOSUp.sh
ClientScript/BackupOrder/: DockerOrder.txt  LinuxOrder.txt  SimOSOrder.txt
Dataset/docker/: docker_get.sh  docker_pull.py
Dataset/linux/: linux_download.txt  linux_get.sh  linux_to_tar.sh
Dataset/redundant/: backup_routine.sh  rrandomio.py
Dataset/simos/: backup_routine.sh  full_backup.sh
MultiClient/: CMakeLists.txt  config.json  setup.sh
MultiClient/include/: chunkStructure.h  chunker.h  clientVar.h  compressGen.h  configure.h  constVar.h  cryptoPrimitive.h  dataReceiver.h  dataRetriever.h  dataSender.h  dataWriter.h  define.h  factoryDatabase.h  leveldbDatabase.h  messageQueue.h  raVerifier.h  readCache.h  serverOptThead.h  sessionKeyExchange.h
Prototype/: CMakeLists.txt  README.md  recompile.sh  setup.sh  sgx-gdb
Prototype/include/: absDatabase.h  absIndex.h  absRecvDecoder.h  chunkStructure.h  clientVar.h  constVar.h  dataWriter.h  define.h  enclaveIndex.h  enclaveRecvDecoder.h  inMemoryDatabase.h  raUtil.h  readCache.h  restoreWriter.h  serverOptThead.h  sslConnection.h
Prototype/src/App/: CMakeLists.txt  dbeServer.cc
Result/exp1/: ShowResult.py
Result/exp2/: ShowResult.py
Result/exp3/: ShowResult.py
Result/exp5/: ShowResult-a.py  ShowResult-t.py
Result/exp6/: ShowResult-a.py  ShowResult-all.py
Result/exp7/: ShowResult-baseline.py  ShowResult-offload.py
(+111 files in other folders)
